Fix bugs, add tests and pipe
Fix bugs on filter
Add service to clean filters
Create pipe to parse episode name
Change favicon and title

--- a/src/app/pages/characters/characters.page.html
+++ b/src/app/pages/characters/characters.page.html
@@ -9,7 +9,7 @@
           <span class="cleanFilters" (click)="cleanFilters()">
             Clear filters
           </span>
-          <ion-accordion-group [multiple]="true">
+          <ion-accordion-group class="ion-margin-top" [multiple]="true">
             <app-accordion
               [value]="'status'"
               (valueChanged)="setFilter($event)"
