--- a/src/app/pages/character/character.page.html
+++ b/src/app/pages/character/character.page.html
@@ -1,23 +1,40 @@
 <app-header></app-header>
 
 <ion-content>
-  <ion-card
-    class="ion-margin-vertical ion-text-center"
-    *ngIf="reqStatus == 'success'; else error"
-  >
-    <img class="ion-padding" [src]="character.image" />
-    <ion-card-header>
-      <ion-card-title>{{ character.name }}</ion-card-title>
-    </ion-card-header>
+  <ion-grid *ngIf="reqStatus == 'success'; else error">
+    <ion-row>
+      <ion-col size="12" sizeMd="8">
+        <ion-card class="ion-margin-vertical ion-text-center" lines="none">
+          <img class="ion-padding" [src]="character.image" />
+          <ion-card-header>
+            <ion-card-title>{{ character.name }}</ion-card-title>
+          </ion-card-header>
 
-    <ion-card-content>
-      <p>Gender: {{ character.gender }}</p>
-      <p>Location: {{ character.location?.name }}</p>
-      <p>Origin: {{ character.origin?.name }}</p>
-      <p>Status: {{ character.status }}</p>
-      <p>Species: {{ character.species }}</p>
-    </ion-card-content>
-  </ion-card>
+          <ion-card-content>
+            <p>Gender: {{ character.gender }}</p>
+            <p>Location: {{ character.location?.name }}</p>
+            <p>Origin: {{ character.origin?.name }}</p>
+            <p>Status: {{ character.status }}</p>
+            <p>Species: {{ character.species }}</p>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="12" sizeMd="4">
+        <ion-list>
+          <h1>Episodes list</h1>
+          <ion-item
+            class="episodesList"
+            *ngFor="let episode of character.episode"
+            lines="none"
+          >
+            <a href="{{ episode }}" target="_blank"
+              >{{ episode | episodeName }}</a
+            >
+          </ion-item>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ng-template #error>
     <p class="ion-text-center">{{ errorMessage }}</p>
   </ng-template>
