--- a/src/app/pages/character/character.page.scss
+++ b/src/app/pages/character/character.page.scss
@@ -1,10 +1,7 @@
 ion-card {
-  width: 70%;
-  margin-left: auto;
-  margin-right: auto;
+  box-shadow: none;
 
   img {
-    width: 100%;
     margin-left: auto;
     margin-right: auto;
 
@@ -13,12 +10,15 @@ ion-card {
   }
 }
 
+.episodesList {
+  display: flex;
+  justify-content: center;
+}
+
 @media all and (min-width: 570px) {
   ion-card {
-    width: 50%;
-
     img {
-      width: 50%;
+      width: 30%;
     }
   }
 }
